[project]
name = "stlt-address-autofill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39.0",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "streamlit-searchbox>=0.1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
